Fix overlapping #projects section

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hover-opacity-z-1:hover {
+  opacity: 1;
+  z-index: 1;
+}
